# AI-diagnostic

./: .gitignore  LICENSE  Makefile  README.md  evaluation_report.json  pyproject.toml  run_evaluation.py  setup.cfg
.github/actions/run-audit/: action.yml
.github/actions/run-format/: action.yml
.github/actions/run-lint/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/upload-reports/: action.yml
.github/workflows/: pr-checks.yml  scheduled-monitoring.yml
app/: main.py
app/agents/: diagnostician.py  diagnostician_old.py  llm_provider.py  schemas.py
app/core/: parser.py
app/utils/: error_generator.py  evaluator.py  loader.py  xml_manager.py
docs/: architecture.md
tests/: conftest.py  test_agent_integration.py  test_api.py  test_evaluation.py  test_openai_connection.py  test_parser.py
