[project]
name = "ai-diagnostic"
version = "0.1.0"
description = "AI-powered PLC diagnostic system for error classification and fix suggestions"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "A. Carolina I-Araujo", email = "alnacivanovaa@gmail.com"}
]
keywords = ["AI", "PLC", "diagnostic", "error-classification", "automation"]
dependencies = [
    "fastapi>=0.128.0",
    "google-genai>=1.60.0",
    "google-generativeai>=0.8.6",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "openai>=2.15.0",
    "pydantic-settings>=2.12.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "pylint>=3.0.0",
    "pip-audit>=2.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["app"]

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/conftest.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "fixme",
    "invalid-name",
    "logging-fstring-interpolation"
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-attributes = 10
max-args = 8
